--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,29 +7,24 @@ orbs:
   # aws-cli: circleci/aws-cli@2.0.3
 # Define the jobs we want to run for this project
 jobs:
-  myjob1:  # Choose any name, such as `build`
-    # The primary container, where your job's commands will run
+  configure_infrastructure: 
     docker:
-      - image: circleci/node:13.8.0
-    steps:
-      - checkout # check out the code in the project directory
-      - run: echo "hello world" # run the `echo` command
-# Sequential workflow
-  create_infrastructure: 
-    docker:
-      - image: amazon/aws-cli
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - add_ssh_keys:
+          fingerprints: ["be:90:dc:e3:0c:c1:5f:aa:7f:fe:50:fe:ee:29:c1:47"] # You can get this ID in the section where you registered the SSH Key
       - run:
-          name: Create Cloudformation Stack
+          name: Install dependencies
           command: |
-            aws cloudformation deploy \
-              --template-file template.yml \
-              --stack-name myStack \
-              --region us-east-1
+            # install the dependencies needed for your playbook
+            apk add --update ansible 
+      - run:
+          name: Configure server
+          command: |
+            ansible-playbook -i inventory.txt config.yml
 workflows:
   # Name the workflow
   myWorkflow:
     jobs:
-      - myjob1
-      - create_infrastructure
+      - configure_infrastructure
