--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: Configure server
           command: |
-            ansible-playbook -i inventory.txt config.yml
+            ansible-playbook -i inventory.txt main-remote.yml
 workflows:
   # Name the workflow
   myWorkflow:
